<resources>
    <string name="app_name">Ю - Телеметрия</string>

    <!--SpeedView-->
    <string name="unit">%</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="subMenuTitle">Lines</string>

    <string name="titleSpeed">Скорость</string>
    <string name="titleAvailability">Availability</string>
    <string name="titlePerformance">Performance</string>
    <string name="titleStops">Остановки</string>
    <string name="titleQuantity">Количество</string>
    <string name="titleTime">Время</string>

    <string name="messageEmptyData">Данные за указанную дату отсутствуют</string>
    <string name="messageUdate">Обновление...</string>
    <string name="emptyDescription">Отсутствует описание</string>

    <string name="title_settings_category_server">Параметры подключения</string>
    <string name="title_settings_category_update">Обновление</string>
    <string name="title_settings_server">Сервер</string>
    <string name="title_settings_web_service">Имя публикации</string>
    <string name="title_settings">Настройки</string>
    <string name="title_analytics">Остановки</string>
    <string name="title_filters">Фильтр</string>

    <string name="title_settings_auto_update">Автообновление данных</string>
    <string name="title_settings_auto_update_interval">Интервал, мин.</string>

    <string name="title_filter_lines">Линии</string>




</resources>
