<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_settings_category_server">

        <EditTextPreference
            android:key="server"
            android:title="@string/title_settings_server"
            />

        <EditTextPreference
            android:key="web_service"
            android:title="@string/title_settings_web_service" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/title_settings_category_update">

        <SwitchPreference
            android:key="settings_switch_update"
            android:title="@string/title_settings_auto_update"
            />

        <EditTextPreference
            android:key="settings_update_interval"
            android:title="@string/title_settings_auto_update_interval"
            android:inputType="number"
            android:defaultValue="0"/>

    </PreferenceCategory>


</PreferenceScreen>