<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CircleProgressView="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/titleAvailability"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <com.github.anastr.speedviewlib.SpeedView
                android:id="@+id/sv_avaibility"
                style="@style/SpeedView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/titlePerformance"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />


            <com.github.anastr.speedviewlib.SpeedView
                android:id="@+id/sv_performance"
                style="@style/SpeedView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/titleSpeed"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <com.github.anastr.speedviewlib.SpeedView
                android:id="@+id/sv_speed"
                style="@style/SpeedView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                custom:sv_centerCircleColor="@android:color/transparent"

                custom:sv_endDegree="360"
                custom:sv_indicator="NoIndicator"

                custom:sv_lowSpeedPercent="0"

                custom:sv_markColor="#4caf50"
                custom:sv_maxSpeed="10000"

                custom:sv_mediumSpeedPercent="0"

                custom:sv_speedTextPosition="CENTER"

                custom:sv_speedometerWidth="5dp"
                custom:sv_startDegree="0"
                custom:sv_unit="psc./min"
                custom:sv_unitUnderSpeedText="true"

                />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!--<FrameLayout-->
        <!--android:id="@+id/fragment_graph"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/titleSpeed"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            />


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/titleStops"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_view_margin_big"
            />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="visible" />

    </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>